<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.hogentessentials1.essentials.ui.homeScreen.HomeScreenViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.homeScreen.HomeScreenFragment">

        <!-- TODO Make the greeting changeable-->

        <TextView
            android:id="@+id/label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/hello_sukrit"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:onClick="@{()->viewModel.onChangeInitiativesClicked()}"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="@dimen/dp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#FF9800"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="348dp"
                android:layout_height="50dp"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/changes"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/icon_change_initiatives"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon_for_change_initiative"
                    android:foregroundGravity="center_vertical"
                    android:minWidth="100dp"
                    android:minHeight="100dp"
                    android:paddingRight="32dp"
                    android:rotation="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/sync_black_18dp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{()->viewModel.onDasboardClicked()}"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#FF9800"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="348dp"
                android:layout_height="50dp"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/dashboard"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/icon_dashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon_for_dashboard"
                    android:foregroundGravity="center_vertical"
                    android:minWidth="100dp"
                    android:minHeight="100dp"
                    android:paddingRight="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/dashboard_black_18dp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/surveys_homescreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:onClick="@{()->viewModel.onSurveysClicked()}"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#FF9800"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="348dp"
                android:layout_height="50dp"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/surveys"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/icon_survey"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon_for_surveys"
                    android:foregroundGravity="center_vertical"
                    android:minWidth="100dp"
                    android:minHeight="100dp"
                    android:paddingRight="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/content_paste_black_48dp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:onClick="@{()->viewModel.onTeamsClicked()}"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#FF9800"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="348dp"
                android:layout_height="50dp"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/my_teams"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon_for_teams"
                    android:foregroundGravity="center_vertical"
                    android:minWidth="100dp"
                    android:minHeight="100dp"
                    android:paddingRight="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/people_black_48dp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Divider voor extra functie cm-->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/brown" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16"
            android:onClick="@{()->viewModel.onMyChangeInitiativesClicked()}"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#FF9800"
            app:strokeWidth="2dp">

            <LinearLayout
                android:layout_width="348dp"
                android:layout_height="50dp"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/my_changes"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/icon_my_change_initiatives"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon_for_my_change_initiatives"
                    android:foregroundGravity="center_vertical"
                    android:minWidth="100dp"
                    android:minHeight="100dp"
                    android:paddingRight="32dp"
                    android:rotation="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/sync_black_18dp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</layout>